--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/inputs/index1.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 </head>
@@ -41,7 +42,7 @@
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
-            <a class="btn btn-outline-dark d-none d-lg-block" href="/inputs/profile.html">Download Resume</a>
+            <a class="btn btn-outline-dark d-none d-lg-block" href="profile.html">Download Resume</a>
           </div>
         </div>
     </nav>
@@ -60,7 +61,7 @@
                     <a href="#projects" class="btn btn-dark btn-lg mt-4">View My Work</a>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="/imgs/portfoilo.png" class="img-fluid rounded-circle shadow-lg" alt="Triveni Profile">
+                    <img src="img/portfoilo.png" class="img-fluid rounded-circle shadow-lg" alt="Triveni Profile">
                 </div>
             </div>
         </div>
@@ -99,7 +100,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Calculator</h5>
                             <p class="card-text">A simple yet effective calculator built using HTML, CSS, and JavaScript.</p>
-                            <a href="/inputs/calc.html" class="btn btn-warning">Try My Calculator</a>
+                            <a href="calc.html" class="btn btn-warning">Try My Calculator</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +110,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Wedding-Invitation Card</h5>
                             <p class="card-text">A beautifully designed wedding invitation card using HTML and CSS.</p>
-                            <a href="/inputs/wedding-invitationcard.html" class="btn btn-warning">See My Wedding Card</a>
+                            <a href="wedding-invitation.html" class="btn btn-warning">See My Wedding Card</a>
                         </div>
                     </div>
                 </div>
@@ -119,7 +120,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Vacation-planner Webpage</h5>
                             <p class="card-text">A vacation planning webpage with a dynamic registration form.</p>
-                            <a href="/inputs/vacations-planner.html" class="btn btn-warning">See the Site</a>
+                            <a href="vacation-planner.html" class="btn btn-warning">See the Site</a>
                         </div>
                     </div>
                 </div>
