--- a/vacation-planner.html
+++ b/vacation-planner.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vacations Booking</title>
-    <link rel="stylesheet" href="vacation.css" />
+    <link rel="stylesheet" href="vacation-style.css" />
   </head>
   <body>
     <header>
@@ -35,15 +35,15 @@
         facere blanditiis quaerat nesciunt excepturi dolorem.
       </p>
       <div>
-        <img src="/imgs/paris-france.jpeg" alt="paris" />
-        <img src="/imgs/paris-france.jpeg" alt="france" />
-        <img src="/imgs/deserts.1.jpeg" alt="desert" />
-        <img src="/imgs/houses.jpeg" alt="house" />
+        <img src="img/paris-france.jpeg" alt="paris" />
+        <img src="img/paris-france.jpeg" alt="france" />
+        <img src="img/deserts.1.jpeg" alt="desert" />
+        <img src="img/houses.jpeg" alt="house" />
         <img
-          src="/imgs/free-photo-of-large-doorway-on-a-lavender-field.jpeg"
+          src="img/free-photo-of-large-doorway-on-a-lavender-field.jpeg"
           alt="free"
         />
-        <img src="/imgs/pexels-3.webp" alt="pexels-3" />
+        <img src="img/pexels-3.webp" alt="pexels-3" />
       </div>
     </section>
     <section class="our-packages">
@@ -55,7 +55,7 @@
       </p>
       <div>
         <figure>
-          <img src="/imgs/paris-france.jpeg" alt="paris" />
+          <img src="img/paris-france.jpeg" alt="paris" />
           <figcaption>paris</figcaption>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
@@ -65,7 +65,7 @@
           <button class="button">Book Now</button>
         </figure>
         <figure>
-          <img src="/imgs/deserts.1.jpeg" alt="desert" />
+          <img src="imgs/deserts.1.jpeg" alt="desert" />
           <figcaption>desert</figcaption>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
@@ -75,7 +75,7 @@
           <button class="button">Book Now</button>
         </figure>
         <figure>
-          <img src="/imgs/paris-france.jpeg" alt="france" />
+          <img src="imgs/paris-france.jpeg" alt="france" />
           <figcaption>paris</figcaption>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
@@ -87,7 +87,7 @@
       </div>
       <div>
         <figure>
-          <img src="/imgs/houses.jpeg" alt="house" />
+          <img src="img/houses.jpeg" alt="house" />
           <figcaption>houses</figcaption>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
@@ -98,7 +98,7 @@
         </figure>
         <figure>
           <img
-            src="/imgs/free-photo-of-large-doorway-on-a-lavender-field.jpeg"
+            src="img/free-photo-of-large-doorway-on-a-lavender-field.jpeg"
             alt="lavender"
           />
           <figcaption>lavender</figcaption>
@@ -110,7 +110,7 @@
           <button class="button">Book Now</button>
         </figure>
         <figure>
-          <img src="/imgs/pexels-3.webp" alt="" />
+          <img src="img/pexels-3.webp" alt="" />
           <figcaption>pexel</figcaption>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
@@ -124,59 +124,59 @@
     <section class="our-gallery">
       <h1>Our gallery</h1>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="taco" />
         <figcaption>image1</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/hotel2.jpg" alt="" />
+        <img src="img/houses.jpeg" alt="house" />
         <figcaption>image2</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="tacos" />
         <figcaption>image3</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/hotel2.jpg" alt="" />
+        <img src="img/hotel2.jpg" alt="hotel" />
         <figcaption>image4</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="tacos" />
         <figcaption>image5</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="tacos" />
         <figcaption>image6</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="tacos" />
         <figcaption>image7</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="tacos" />
         <figcaption>image8</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="" />
         <figcaption>image9</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="tacos" />
         <figcaption>image10</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="tacos" />
         <figcaption>image11</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="tacos" />
         <figcaption>image2</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="tacos" />
         <figcaption>image2</figcaption>
       </figure>
       <figure>
-        <img src="/imgs/tacos.jpg" alt="" />
+        <img src="img/tacos.jpg" alt="tacos" />
         <figcaption>image2</figcaption>
       </figure>
     </section>
