--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,7 @@
       <table>
         <tr>
           <td>
-            <img src="/portfolio/imgs/teja.jpg" alt="teja" height="200px" width="200px" />
+            <img src="img/teja.jpg" alt="teja" height="200px" width="200px" />
           </td>
           <td>
             <h3>TRIVENI MEDIKONDA</h3>
