--- a/profile.html
+++ b/profile.html
@@ -6,24 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile website</title>
     <style>
-      body {
-        font-family: Calibri, sans-serif;
-        background-color: gray;
-      }
-      div {
-        background-color: lightgray;
-        padding: 10px;
-        border-radius: 10px;
-        margin: 10px;
-      }
-      img {
-        border-radius: 50%;
-        box-shadow: 0 0 10px black;
-      }
-      table {
-        width: 100%;
-      }
-    </style>
+        body {
+          font-family: Calibri, sans-serif;
+          background-color: gray;
+          margin: 0;
+          padding: 0;
+        }
+        .container {
+          max-width: 90%;
+          margin: auto;
+        }
+        div {
+          background-color: lightgray;
+          padding: 20px;
+          border-radius: 10px;
+          margin: 10px;
+        }
+        img {
+          border-radius: 50%;
+          box-shadow: 0 0 10px black;
+          max-width: 100%;
+          height: auto;
+        }
+        table {
+          width: 100%;
+        }
+        iframe {
+          width: 100%;
+          height: 300px;
+          border-radius: 20px;
+        }
+        @media (max-width: 768px) {
+          table, tr, td {
+            display: block;
+            width: 100%;
+            text-align: center;
+          }
+          img {
+            max-width: 150px;
+            height: auto;
+          }
+        }
+      </style>
   </head>
   <body>
     <div>
