--- a/calc.html
+++ b/calc.html
@@ -53,7 +53,15 @@
     input:hover{
       background-color:cadetblue;
     }
+    @media (max-width: 400px) {
+            .container {
+                width: 80%;
+            }
 
+            button {
+                font-size: 1rem;
+            }
+        }	   
    </style>
 </head>
 <body>
