--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg fixed-top shadow-sm bg-white">
-        <div class="container">
+        <div class="container-lg">
           <a class="navbar-brand text-uppercase fw-bold text-primary" href="#" style="font-size: 1.5rem; letter-spacing: 1px;">Portfolio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
